@@ -171,6 +171,8 @@
 
       \item \code{loess(*, weights = *)} stored wrong weights and hence
       gave slightly wrong predictions for \code{newdata}.  (\PR{16587})
+
+      \item \code{aperm(a, *)} now preserves \code{names(dim(a))}.
     }
   }
 }
